amélioration du code